style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    display: flex;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    background: url('images/bg-desktop.png');
    background-repeat: no-repeat;
    background-size: 100% auto;
    background-position: center bottom;
    background-color: hsl(229, 57%, 11%);
    
    color: white;
    font-family: 'Raleway', sans-serif;
    font-weight: 100;
    font-size: 14px;
}
button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 3rem;
    height: 3rem;
    border-radius: .6rem;
    border: none;
    background-color: hsl(229, 57%, 11%);
}
.storage-ui {
    display: flex;
    align-items: end;
    gap: 2rem;
}
.logo {
    margin-bottom: 2rem;
}
.storage-ui__actions {
    height: 12rem;
    width: 20rem;
    padding: 2.3rem;
    background-color: hsl(228, 56%, 26%);

    border-radius: .7rem;
    border-top-right-radius: 6rem;
}
.buttons {
    display: flex;
    gap: 1rem;
}
.storage-ui__data {
    display: flex;
    flex-direction: column;

    height: 9rem;
    position: relative;
    width: 35rem;
    padding: 2rem;
    background-color: hsl(228, 56%, 26%);

    border-radius: .7rem;
}
.storage-ui__data-text {
    margin-top: .5rem;
    margin-bottom: 1rem;
}
.storage-ui__bar {
    display: flex;
    justify-content: left;
    align-items: center;
    margin-bottom: .5rem;
    width: 31rem;
    height: 1.2rem;
    background-color: hsl(227, 58%, 16%);
    border-radius: 9999px;
}
.storage-ui__bar-used {
    display: flex;
    justify-content: right;
    align-items: center;
    
    margin-left: .2rem;
    width: 24rem;
    height: .8rem;
    background: linear-gradient(to right, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
    border-radius: 9999px;
}
.storage-ui__bar-circle {
    margin-right: .1rem;
    width: .6rem;
    height: .6rem;
    border-radius: 50%;
    background-color: white;
}
.storage-range {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-weight: 300;
    font-size: .7rem;
}
.storage-ui__remaining-storage {
    position: absolute;
    margin-bottom: 5rem;
    width: 12rem;
    height: 5rem;
    top: 0;
    right: 3rem;
    transform: translateY(-66%);
    background-color: white;

    border-radius: .7rem;;
    border-bottom-right-radius: 0;

    text-align: center;
}
.storage-ui__remaining-storage::after {
    content: "";
    position: absolute;
    bottom: -22px;      
    right: 0;       

    width: 0;
    height: 0;
    border-left: 12px solid transparent;
    border-right: 12px solid white;
    border-top: 12px solid white;
    border-bottom: 12px solid transparent;
}
.storage-ui__remaining-storage-text {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    gap: .5rem;
    color: hsl(229, 57%, 11%)
}
.storage-ui__remaining-storage p {
    text-transform: uppercase;
    font-weight: 700;
    color: hsl(229, 7%, 55%);
}
.storage-ui__remaining-storage strong {
    font-weight: 700;
    font-size: 2.8rem;
    color: hsl(229, 57%, 11%);
}

@media (max-width: 950px) {
    body {
        background-image: url('images/bg-mobile.png');
        background-position: center top;
        background-size: cover;
    }
    .storage-ui {
        text-align: center;
        flex-direction: column;
    }
    .storage-ui__data-text {
        margin-top: 0;
    }
    .storage-ui__data {
        height: 10rem;
        width: 20rem;
        margin-bottom: 2.5rem;
    }
    .storage-ui__bar {
        width: 16rem;
    }
    .storage-ui__bar-used {
        width: 12rem;
    }
    .storage-ui__remaining-storage {
        right: 4rem;
        top: 10.75rem;
        border-bottom-right-radius: .7rem;
    }
    .storage-ui__remaining-storage::after {
        content: none;
    }
}

